tests/hevm/fail/redundant/redundant.act
definition A
interface constructor()

creates

  uint x := 0

behaviour f of A
interface f()

iff

  CALLVALUE == 0
  x == 1

storage

  x => 2